# petitioner

./: LICENSE  README.md  pyproject.toml
src/petitioner/: __init__.py  adapter.py  cli.py  client.py  comments.py  config.py  discovery.py  manifest.py  models.py  normalize.py  orchestrator.py  store.py  transport.py
tests/: conftest.py
tests/contract/: test_live_contract.py
tests/fixtures/: comment_page_1.json  comment_page_2.json  petition_metadata.json
tests/integration/: test_end_to_end.py  test_resume_and_faults.py
tests/unit/: test_adapter.py  test_client.py  test_comments.py  test_discovery.py  test_manifest.py  test_normalize.py  test_store.py
